--- a/Rdt.CourseFinder/Views/Dashboard/Admin.cshtml
+++ b/Rdt.CourseFinder/Views/Dashboard/Admin.cshtml
@@ -34,4 +34,4 @@
     </table>
 </div>
 <br />
-@{Html.RenderAction("VisaDeposit", "Notification");}
+@{Html.RenderAction("PendingApproval", "TravelPost");}
