--- a/Rdt.CourseFinder/Views/Notification/VisaDeposit.cshtml
+++ b/Rdt.CourseFinder/Views/Notification/VisaDeposit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Rdt.CourseFinder.Entities.Candidate>
 
-<h5>Please update the visa deposit status of the following</h5>
+<h5>Visa deposit status</h5>
 <table class="table table-hover table-bordered" id="visaDepoList">
     <tr>
         <th>#</th>
