--- a/Rdt.CourseFinder/Views/TravelPost/PendingApproval.cshtml
+++ b/Rdt.CourseFinder/Views/TravelPost/PendingApproval.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Rdt.CourseFinder.Entities.Candidate>
 
-<h5>Please approve the travel postpone requests</h5>
+<h5>Travel postpone requests</h5>
 <table class="table table-hover table-bordered" id="travelPostList">
     <tr>
         <th>#</th>
